# alarmo-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  link.ld
.cargo/: config.toml
examples/: alloc.rs  buttons.rs  buttons_interrupt.rs  dial_input.rs  dial_led.rs  lcd.rs  panic.rs  usb_scsi.rs  usb_serial.rs  usb_serial_interrupt.rs
src/: arch.rs  delay.rs  dial.rs  display.rs  e_alloc.rs  hal_msp.rs  hal_sys.rs  input.rs  interrupt_handlers.rs  lib.rs  panic.rs
src/pac/: adc.rs  mod.rs  sdmmc.rs  sram.rs  timers.rs  usb.rs
