[package]
name = "alarmo"
version = "0.0.3"
description = "Provides a convenient API to bootstrap firmware and access peripherals on the Nintendo Alarmo"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoccoDev/alarmo-rs"
keywords = ["stm32h7xx", "stm32", "nintendo", "embedded-devices", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = ["/.vscode", "/.github"]

[package.metadata.docs.rs]
all-features = true
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.5"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc"], default-features = false }
display-interface = { version = "0.5.0", optional = true }
embedded-hal = "1.0"
embedded-alloc = { version = "0.6.0", optional = true }

[features]
default = []
display = ["display-interface"]
alloc = ["embedded-alloc", "cortex-m/critical-section-single-core"]

[dev-dependencies]
panic-halt = "1.0.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
mipidsi = "0.8.0"
embedded-graphics = "0.8.1"

[build-dependencies]
cc = "1.0.28"
bindgen = { version = "0.70.1", features = ["experimental"] }

[[example]]
name = "lcd"
required-features = ["display"]

[[example]]
name = "alloc"
required-features = ["alloc", "display"]