[package]
name = "alarmo"
version = "0.0.4"
description = "Provides a convenient API to bootstrap firmware and access peripherals on the Nintendo Alarmo"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoccoDev/alarmo-rs"
keywords = ["stm32h7xx", "stm32", "nintendo", "embedded-devices", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = ["/.vscode", "/.github"]

[package.metadata.docs.rs]
all-features = true
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = { version = "0.7.5", features = ["set-vtor", "set-sp", "zero-init-ram"] }
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc", "rt"] }
display-interface = { version = "0.5.0", optional = true }
embedded-hal = "1.0"
embedded-alloc = { version = "0.6.0", optional = true }
mipidsi = { version = "0.8.0", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }

[features]
default = []
display = ["display-interface"]
display-mipidsi = ["display", "mipidsi", "embedded-graphics"]
alloc = ["embedded-alloc", "cortex-m/critical-section-single-core"]
panic = ["display-mipidsi"]

[dev-dependencies]
panic-halt = "1.0.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }


[[example]]
name = "lcd"
required-features = ["display"]

[[example]]
name = "alloc"
required-features = ["alloc", "display"]